<resources>
    <string name="app_name">LetsHangOut</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="registration_failed">Registration failed!</string>
    <string name="registration_successful">Registration successful!</string>

    <string name="authentication_failed">Authentication failed!</string>
    <string name="authentication_successful">Authentication successful!</string>

    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="title_activity_home">LetsHangOut</string>
    <string name="sendFriendRequest">Send Friend Request</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="section_format">Hello World from section: %1$s</string>
    <string name="title_activity_add_edit_invitation">Create Invitation</string>
    <string name="who">Who</string>
    <string name="what">What</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="going">Going?</string>
    <string name="other">Other</string>
    <string name="option">Option</string>
    <string name="title_activity_add_edit_rsvp">RSVP</string>

</resources>
