<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="androidapp.social.jj.letshangout.layout.AddEditInvitationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"> <!-- Don't display keyboard by default -->

            <Space
                android:layout_width="1dp"
                android:layout_height="60dp"/>

            <TextView
                android:id="@+id/textView_whatLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:textColor="@color/DeepPink"/>

            <TextView
                android:id="@+id/textView_whatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/textView_when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="@color/DeepPink"/>

            <TextView
                android:id="@+id/textView_whenValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/textView_who"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who"
                android:textColor="@color/DeepPink"/>

            <TextView
                android:id="@+id/textView_whoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/Black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textView_going"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/going"
                    android:textColor="@color/DeepPink"/>

                <Switch
                    android:id="@+id/switch_going"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="No"
                    android:textOn="Yes"
                    android:paddingLeft="40dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/textView_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:textColor="@color/DeepPink"
                android:layout_marginBottom="20dp"/>

            <RadioGroup
                android:id="@+id/radioGroup_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radioButton_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>

            </RadioGroup>

            <EditText
                android:id="@+id/editText_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="30dp"
                android:enabled="false"/>


            <Button
                android:id="@+id/button_send"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
