<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="androidapp.social.jj.letshangout.layout.AddEditInvitationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">  <!-- Don't display keyboard by default -->

            <Space
                android:layout_width="1dp"
                android:layout_height="60dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_what"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="19">

                    <EditText
                        android:id="@+id/editText_when"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/when"
                        android:inputType="datetime"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageButton_whenCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@android:drawable/ic_menu_today"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <androidapp.social.jj.letshangout.utils.ContactsCompletionView
                    android:id="@+id/contactsCompletionView_who"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/who"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <androidapp.social.jj.letshangout.utils.PlacesCompletionView
                    android:id="@+id/placesCompletionView_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/where" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:src="@drawable/powered_by_google_light"/>

            <Button
                android:id="@+id/button_send"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/send"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
